# webots_manipulation

./: CMakeLists.txt  README.md  TODO.md  package.xml
config/: gpd_config.yaml  panda_object.yaml  ur5e_grasp_data.yaml
config/calib/: camera.yaml
launch/: complete.launch  gdb_settings.gdb  gpd_demo.launch  grasp_pipeline.launch  kinect.launch  minimal.launch  motion_planning_pipeline.launch  robotiq_3f_gripper.launch  ur5e.launch  ur5e_upload.launch  webots.launch
scripts/: joint_state_publisher.py  kinect_helper.py  robotiq_gripper_3f.py  trajectory_follower.py  universal_robots_ros.py  webots_launcher.py
src/: grasp_generator_demo.cpp  grasp_pipeline_demo.cpp  motion_planning_pipeline_demo.cpp  pick_and_place.cpp  remap_pc.cpp
src/demo/: gripper.cpp  motion_planning_pipeline.cpp  move_group_interface.cpp  pick_box.cpp
urdf/: ur5e_limited_gripper.xacro
worlds/: .factory.wbproj  factory.wbt
