<?xml version="1.0"?>
<package>
  <name>webots_manipulation</name>
  <version>0.0.1</version>
  <description>The ROS package that contains training code with MoveIt! and Webots.</description>

  <maintainer email="eborghi@ekumenlabs.com">Emiliano Borghi</maintainer>
  <author>Emiliano Borghi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_grasps</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_grasps</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>universal_robot</run_depend>

</package>
